--- a/nsprpub/configure.in
+++ b/nsprpub/configure.in
@@ -1492,23 +1492,21 @@ tools are selected during the Xcode/Developer Tools installation.])
     AC_DEFINE(XP_UNIX)
     AC_DEFINE(HAIKU)
     AC_DEFINE(Haiku)
+    AC_DEFINE(HAVE_BSD_FLOCK)
     AC_DEFINE(HAVE_SOCKLEN_T)
-    AC_DEFINE(HAVE_FCNTL_FILE_LOCKING)
-    DSO_CFLAGS="-fPIC"
-    USE_PTHREADS=1
-    IMPL_STRATEGY=_PTH
-    MDCPUCFG_H=_linux.cfg
-    if test -n "$USE_64"; then
-        PR_MD_ASFILES=os_Linux_x86_64.s
+    AC_DEFINE(HAVE_POINTER_LOCALTIME_R)
+    CFLAGS="$CFLAGS $(DSO_CFLAGS) -ansi -Wall"
+    MOZ_OBJFORMAT=`test -x /usr/bin/objformat && /usr/bin/objformat || echo elf`
+    if test "$MOZ_OBJFORMAT" = "elf"; then
+    DLL_SUFFIX=so
     else
-        PR_MD_ASFILES=os_Linux_x86.s
+    DLL_SUFFIX=so.1.0
     fi
-    PR_MD_CSRCS=linux.c
     MKSHLIB='$(CC) $(DSO_LDOPTS) -o $@'
     DSO_CFLAGS=-fPIC
     DSO_LDOPTS='-shared -Wl,-soname -Wl,$(notdir $@)'
-    _OPTIMIZE_FLAGS=-O2
-    AC_CHECK_LIB(network, gethostbyaddr, [OS_LIBS="$OS_LIBS -lnetwork"])
+    MDCPUCFG_H=_haiku.cfg
+    PR_MD_CSRCS=haiku.c
     ;;
 
 
