--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ failure = { git = "https://github.com/badboy/failure", rev = "64af847bc5fdcb6d24
 failure_derive = { git = "https://github.com/badboy/failure", rev = "64af847bc5fdcb6d2438bec8a6030812a80519a5" }
 glslopt = { path = "third_party/rust/glslopt" }
 net2 = { path = "third_party/rust/net2" }
+mio = { path = "third_party/rust/mio" }
 
 [patch.crates-io.cranelift-codegen]
 git = "https://github.com/mozilla-spidermonkey/wasmtime"
